== 0.2.4

* 1 bug fix :
  * Platform recognition would recognise Mac OS X as win32


== 0.2.2 2009-02-13

* 3 major enhancements :
  * Thumbnails created for pictures & videos
  * Support for .zip  & .rar archives
  * Alias_path is now LetterTokenized

* 2 minor enhancements:
  * More specs
  * Some aesthetical changes

* 1 bug fix :
  * Displaying filetypes without any icon would raise an Exception

== 0.2.0  2009-02-02

* 1 major enhancement :
  * Upgraded to Rails 2.2.2

* 1 minor enhancement :
  * extract EXIF data from pictures

* 1 bug fix:
  * permissions were set the wrong way

== 0.1.9  2008-05-09

* 2 minor enhancements:
  * Multicolor cache highlighting à la Google
  * More documentation

== 0.1.8  2008-05-08

* 2 minor enhancements:
  * New IndexerLogger with basic statistics
  * More specs & documentation.

* 2 bug fixes:
  * Binary documents without extension are not considered supported anymore
  * Ensure that index is locked system-wide by using lock file.

== 0.1.7  2008-04-30

* 5 minor enhancements:
  * added cache highlighting à la Google
  * rake index:update implemented as described in Ferret book by David Balmain
  * rake index:prune removes missing files from indexer
  * possibility to sort results by relevance / by date
  * one configuration file for performance tweaks

== 0.1.6  2008-04-25

* 1 minor enhancement:
  * replaced index key by Document#probably_unique_id

* bug fixes:
  * Added forgotten public/images/flags to generator file

== 0.1.5  2008-04-25

* 1 major enhancement:
  * yet another Indexer & Index rewrite

* 1 minor enhancement:
  * flags to indicate found language

* bug fixes:
  * No more (or just less?) index lock errors

== 0.1.4  2008-04-23
* 1 minor enhancement:
  * minimal MacOS support

== 0.1.3  2008-04-20

* 1 bug fix:
  * removed verbose debug info

== 0.1.2  2008-04-20

* 3 major enhancements:
  * complete Indexer & Index rewrite
  * new DSL syntax
  * multi-threaded Indexer

== 0.1.1  2008-04-12
